// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminUserFormService createAdminUser$ should create admin user 1`] = `
Object {
  "data": Object {
    "createdAt": Any<String>,
    "email": "testuser+johndoe@anyupp.com",
    "id": "test_ADMIN_ADMIN_USER_IT_ADMIN_USER_ID_01",
    "name": "John Doe",
    "phone": "+36123456789",
    "profileImage": null,
    "settings": null,
    "updatedAt": Any<String>,
  },
  "type": "insert",
}
`;

exports[`AdminUserFormService createAdminUserFormGroup should create form group 1`] = `
Object {
  "email": "",
  "name": "",
  "phone": "",
  "profileImage": "",
}
`;

exports[`AdminUserFormService updateAdminUser$ should update admin user 1`] = `
Object {
  "data": Object {
    "createdAt": Any<String>,
    "email": "testuser+mickey@anyupp.com",
    "id": "test_ADMIN_ADMIN_USER_IT_ADMIN_USER_ID_02",
    "name": "Micky Mouse",
    "phone": "+36123456789",
    "profileImage": null,
    "settings": null,
    "updatedAt": Any<String>,
  },
  "type": "update",
}
`;
